--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 dj-database-url==0.5.0
 Django==2.2.6
+django-crispy-forms==1.8.0
+django-heroku==0.3.1
 gunicorn==19.9.0
-psycopg2==2.8.4
-pytz==2019.3
-whitenoise==4.1.4
-django-heroku
-django-crispy-forms
 Pillow==6.2.1
+psycopg2==2.8.4
+psycopg2-binary==2.8.4
+pytz==2019.3
+sqlparse==0.3.0
+virtualenv==16.7.7
+whitenoise==4.1.4
